# mare-implementation

./: .gitconfig  .gitignore  RELATORIO_CORRECAO_OUTPUT_COMPLETO.md  RELATORIO_CORRECAO_PROMPTS_MARE_CLI.md  RELATORIO_FINAL_100_PORCENTO_SUCESSO.md  RELATORIO_FINAL_CORRECAO_TESTES_ENDTOEND.md  RELATORIO_FINAL_CORRECOES_TESTES_MARE_CLI.md  RELATORIO_FINAL_TESTES_MARE_CLI.md  RELATORIO_TRADUCAO_MARE_CLI.md  analise_mare.md  arquitetura_cli.md  todo.md  todo_correcao_testes_endtoend.md  todo_traducao.md
.local/share/code-server/: coder.json  machineid
.local/share/code-server/CachedProfilesData/__default__profile__/: extensions.builtin.cache  extensions.user.cache
.local/share/code-server/User/: machineid
.local/share/code-server/User/History/2c077841/: 4THo  eWlx  entries.json  (+1 more)
mare_cli/: DELIVERY_REPORT.md  README.md  TRANSPARENCY_ANALYSIS.md  TRANSPARENCY_IMPROVEMENTS_REPORT.md  pyproject.toml  requirements.txt  run_tests.py  setup.py
mare_cli/docs/: examples.md  installation.md
mare_cli/mare/agents/: __init__.py  base.py  checker.py  collector.py  documenter.py  factory.py  modeler.py  stakeholder.py  stakeholder_fixed.py
mare_cli/mare/cli/: main.py
mare_cli/mare/cli/commands/: export.py  init.py  run.py  status.py
mare_cli/mare/pipeline/: __init__.py  enhanced_pipeline_demo.py  executor.py  mare_pipeline.py
mare_cli/mare/utils/: exceptions.py  helpers.py  logging.py  progress.py
mare_cli/mare/workspace/: __init__.py  shared_workspace.py  storage.py
mare_cli/projeto_teste/: .env.template  README.md
mare_cli/projeto_teste/.mare/: config.yaml
mare_cli/projeto_teste/.mare/workspace/: executions.json
mare_cli/projeto_teste/.mare/workspace/artifacts/7f65b509-d98a-4e97-b9fa-635631230215/: check_results.md  entities.md  final_srs.md  relationships.md  requirements.md  user_stories.md
mare_cli/projeto_teste/.mare/workspace/artifacts/c4f8d451-df46-494a-ac62-27bdb38013b9/: check_results.md  entities.md  final_srs.md  relationships.md  requirements.md  user_stories.md
mare_cli/test_integration_project/: README.md
mare_cli/test_integration_project/.mare/: config.yaml
mare_cli/test_integration_project/.mare/workspace/: executions.json  workspace.db  workspace.json
mare_cli/test_integration_project/.mare/workspace/artifacts/2680f95c-930a-4137-a4a0-5cf8d59fcb99/: check_results.md  entities.md  final_srs.md  relationships.md  requirements.md  user_stories.md
mare_cli/test_integration_project/input/: requirements.md
mare_cli/test_integration_project/output/: requirements.md
mare_cli/tests/: test_openai_integration.py
mare_cli/tests/integration/: test_integration.py
mare_cli/tests/unit/: test_agents.py  test_pipeline.py  test_workspace.py
my_project/: .env.template  README.md
my_project/.mare/: config.yaml
my_project/.mare/workspace/: executions.json
my_project/.mare/workspace/artifacts/9885998e-8736-41d6-a604-0b8e3cdf10b5/: check_results.md
my_project/input/: requirements.md
my_project/output/: entities.md  final_srs.md  relationships.md  requirements.md  user_stories.md
upload/: pasted_content.txt
(+1 files in other folders)
